<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:gravity="center"
        android:layout_alignParentTop="true"
        android:layout_above="@id/input_group">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif"
            android:text="@string/sign_up"
            android:textColor="#FFFFFF"
            android:textSize="20sp"/>
      </LinearLayout>


    <LinearLayout
        android:id="@+id/input_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:layout_marginBottom="50dp"
        android:layout_alignParentBottom="true"
        android:gravity="center">
        <ImageView
            android:id="@+id/img"
            android:src="@drawable/ic_launcher_background"
            android:layout_width="50dp"
            android:layout_height="50dp"

            />
        <EditText
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edit_text_top"
            android:hint="@string/name"
            android:inputType="textPersonName"
            android:padding="15dp" />
        <EditText
            android:id="@+id/surname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edit_text_top"
            android:hint="@string/surname"
            android:inputType="textPersonName"
            android:padding="15dp" />
        <EditText
            android:id="@+id/username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edit_text_top"
            android:hint="@string/username"
            android:inputType="textPersonName"
            android:padding="15dp" />

        <EditText
            android:id="@+id/mail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edit_text_middle"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:padding="15dp" />

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edit_text_middle"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:padding="15dp"/>

        <EditText
            android:id="@+id/repassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edit_text_middle"
            android:hint="@string/repassword"
            android:inputType="textPassword"
            android:padding="15dp"/>

        <Button
            android:id="@+id/sing_up"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/button"
            android:foreground="?android:attr/selectableItemBackground"
            android:text="sign_up"
            android:textAllCaps="false"
            android:textColor="#FE5295"
            android:textSize="17sp"/>


    </LinearLayout>
</RelativeLayout>